不要使用AndroidX, 首先它比较新（很多第三方库还没有支持），和支持库冲突，可惜的是不能用jetpack组件了，唉，折腾了一下午发现，看来用别人的项目配置是坑最少的方法啊

--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
@@ -27,7 +24,27 @@ task clean(type: Delete) {
 }
 
 ext {
-    //app dependents
-    supportLibraryVersion = '28.0.0'
+    // Sdk and tools
+    minSdkVersion = 16
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+
+    // App dependencies
+    supportLibraryVersion = '26.1.0'
+    gsonVersion = '2.8.0'
+    calligraphyVersion = '2.2.0'
+    glideVersion = '3.7.0'
+
+    dagger2Version = '2.8'
+    rxjava2Version = '2.0.6'
+    rxandroidVersion = '2.0.1'
     butterKnifeVersion = '8.6.0'
+    greenDaoVersion = '3.2.0'
+
+    //Test dependencies
+    junitVersion = '4.12'
+    espressoVersion = '2.2.2'
+    mockitoVersion = '2.7.1'
+    //app dependents
 }
