--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     // image
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     // parser
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
