--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
     implementation 'com.qmuiteam:qmui:1.2.0'
 
-    //fragment
+    //fragment managing
     implementation 'me.yokeyword:fragmentation:1.3.6'
 
     // dependency injection
@@ -53,13 +53,17 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    //utils
+    implementation 'com.orhanobut:logger:2.2.0'
+
     // parser
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
 
     //code gen
     implementation "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
-    //rxjava
+
+    //reactiveX
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
