--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+//    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     // android support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -66,5 +69,5 @@ dependencies {
     //reactiveX
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
+    implementation files('libs/SQLiteStudioRemote.jar')
 }
