初步完成了M模块，暂时没有测试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,10 +77,17 @@ dependencies {
 
     //data persiset
     implementation 'org.greenrobot:greendao:3.2.2'
+
+    //http client
+//    implementation "com.amitshekhar.android:rx2-android-networking:$rootProject.rx2FastAndroidNetworking"
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
 
 greendao {
-//    升级数据库时，只需要改动下这个版本号，然后再实现onUpgrade方法即可
+    //升级数据库时，只需要改动下这个版本号，然后再实现onUpgrade方法即可
     //如果没有，Helper默认是版本1
     schemaVersion 8
 }
