--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 //    这个不加就没法生成类了
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
 
+    //ui
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+
     //fragment managing
     implementation 'me.yokeyword:fragmentation:1.3.6'
 
