--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     // image
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
 
     //utils
     implementation 'com.orhanobut:logger:2.2.0'
