--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.belief">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".MvpApp"
@@ -25,6 +27,7 @@
         <activity android:name=".ui.comm.CommDetailActivity"></activity>
         <activity android:name=".ui.user.LoginActivity"></activity>
         <activity android:name=".ui.sport.ClassDetailActivity"></activity>
+        <activity android:name=".ui.sport.StartSportActivity"></activity>
     </application>
 
 </manifest>
