--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     //ui
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
+    implementation 'com.github.addappcn:android-pickers:1.0.3'
 
     //fragment managing
     implementation 'me.yokeyword:fragmentation:1.3.6'
@@ -80,12 +81,15 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    implementation 'com.lovedise:permissiongen:0.0.6'
 
     //utils
     implementation 'com.orhanobut:logger:2.2.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.0.1'
 
     // parser
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
+    implementation 'com.alibaba:fastjson:1.1.56.android'
 
     //code gen
     implementation "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
