--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -56,7 +56,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:design:27.1.0"
     implementation "com.android.support:support-vector-drawable:$rootProject.supportLibraryVersion"
     implementation "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
     implementation 'com.qmuiteam:qmui:1.2.0'
@@ -67,6 +67,9 @@ dependencies {
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
     implementation 'com.github.addappcn:android-pickers:1.0.3'
+    implementation 'com.sackcentury:shinebutton:0.2.0'
+    //ThumbUp
+    implementation 'com.ldoublem.thumbUplib:ThumbUplib:0.5'
 
     //fragment managing
     implementation 'me.yokeyword:fragmentation:1.3.6'
@@ -82,6 +85,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation 'com.lovedise:permissiongen:0.0.6'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     //utils
     implementation 'com.orhanobut:logger:2.2.0'
